--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -666,3 +666,36 @@ body {
 .menu-card:hover .card-back {
   background-color: #3b5a4a; /* Darker shade on hover */
 }
+
+
+
+
+
+
+/* ------------contact css *
+
+----------------- */
+
+.map-container {
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.map-container iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.map-overlay {
+  background: rgba(0, 128, 0, 0.15); /* green tint */
+  pointer-events: none; /* keep map interactive */
+  border-radius: 12px;
+}
+.menu-container {
+  background-color: #1A3E32;
+  padding: 2rem;
+  border-radius: 10px;
+  margin-top: 0;
+}
